# EldenRingSaveKeeper

./: .gitignore  Cargo.toml  LINCENSE  README.md  README_zh.md  index.html  package-lock.json  package.json  tauri.conf.json  vite.config.js
src/: main.rs
src/core/: archived.rs  mod.rs  setting.rs
src/ui/: App.vue  main.js  style.css
src/ui/components/: Home.vue  Notification.vue  SaveDetail.vue
src/ui/router/: index.js
