[package]
name = "EldenRingSaveKeeper"
version = "0.1.0"
description = "EldenRingSaveKeeper - Auto Save,Save Editor,Save Info View"
authors = ["0chen"]
license = "GPL-3.0"
repository = ""
default-run = "EldenRingSaveKeeper"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
hex = "0.4.2"
windows = "0.58.0"
serde_json = "1.0"
sysinfo = "0.30.12"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.4", features = ["api-all"] }
dirs = "5.0.1"
zip = "2.1.3"
walkdir = "2.5.0"
once_cell = "1.19.0"
chrono = "0.4.38"
tokio = { version = "1.38.0", features = ["time", "rt", "rt-multi-thread", "macros"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
